--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@ urban infrastructure systems:
 </ul>
 </section
 
+<!-- Certifications -->
+<section id="educa
 <section id="certifications" class="section reveal">
 <h2>Certifications</h2>
-
 <div class="cert-item">
   <h4>Key Concepts of Project Management & Their Application in Bangladesh</h4>
   <p class="cert-meta">
