--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@ urban infrastructure systems:
 <li><strong>B.Sc. in Civil Engineering</strong> – Ahsanullah University of Science & Technology, Dhaka, Bangladesh <i>(2017- 2022)</i></li>
 <li>Thesis: <em>Effects on air quality in Dhaka city due to Covid-19 pandemic induced nationwide lockdown</em></li>
 </ul>
-</section
+</section>
 
 <!-- Certifications -->
-<section id="educa
 <section id="certifications" class="section reveal">
 <h2>Certifications</h2>
 <div class="cert-item">
