--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="section-divider"></div>
 
 <section id="about" class="section reveal">
-<h2>About Me & Current Focus</h2>
+<div class="section-header">👤 About Me & Current Focus</div>
 <p>
 I am Civil Engineer dedicated to developing sustainable environmental strategies as per my research experience in <strong>geospatial analysis such as urban emission & air pollution, conducting environmental impact assessments, and analyzing socio-environmental challenges for mega-scale transit projects.</strong> Also, my professional experience provided me with knowledge of <strong>transportation development in Bangladesh’s first Metro Rail Project (DMRT Line-6), integration of BIM technology and cost controlling in mega projects.</strong> I am proficient in geospatial data science (GIS, remote sensing), environmental monitoring, and predictive modeling using Python and machine learning. Based on this foundation, I aim to advance interdisciplinary research on urban settings and environmental complications integrating ML and AI, with a focus on bringing changes to the current policies, resilient and economic urban planning.
 </p>
@@ -60,7 +60,7 @@ I am Civil Engineer dedicated to developing sustainable environmental strategies
 <div class="section-divider"></div>
 
 <section id="focus" class="section reveal">
-<h2>Current Research Focus</h2>
+<div class="section-header">🎯 Current Research Focus</div>
 <p>
 My current academic and technical focus includes the following research directions,
 which reflect my interest in data-driven, environmentally responsible, and policy-relevant
@@ -95,7 +95,7 @@ urban infrastructure systems:
 <div class="section-divider"></div>
 
 <section id="education" class="section reveal">
-<h2>Education</h2>
+<div class="section-header">🎓 Education</div>
 <ul>
 <li><strong>B.Sc. in Civil Engineering</strong> – Ahsanullah University of Science & Technology, Dhaka, Bangladesh <i>(2017- 2022)</i></li>
 <li>Thesis: <em>Effects on air quality in Dhaka city due to Covid-19 pandemic induced nationwide lockdown</em></li>
@@ -106,7 +106,7 @@ urban infrastructure systems:
 <div class="section-divider"></div>
 
 <section id="certifications" class="section reveal">
-<h2>Certifications</h2>
+<div class="section-header">📜 Certifications</div>
 <div class="cert-item">
   <h4>Key Concepts of Project Management & Their Application in Bangladesh</h4>
   <p class="cert-meta">
@@ -160,7 +160,7 @@ urban infrastructure systems:
 <div class="section-divider"></div>
 
 <section id="volunteering" class="section reveal">
-<h2>Volunteering & Extracurricular Activities</h2>
+<div class="section-header">🤝 Volunteering & Extracurricular Activities</div>
 <div class="vol-item">
   <h4>Member — AUST Innovation & Design Club</h4>
   <p class="vol-meta">
@@ -214,7 +214,7 @@ urban infrastructure systems:
 <div class="section-divider"></div>
 
 <section id="experience" class="section reveal">
-<h2>Professional Experience</h2>
+<div class="section-header">🏗️ Professional Experience</div>
 <div class="exp-item">
   <h3>Quantity Survey & Cost Control Engineer</h3>
   <p class="exp-meta">
@@ -287,7 +287,7 @@ urban infrastructure systems:
 <div class="section-divider"></div>
 
 <section id="research" class="section reveal">
-<h2>Research & Publications</h2>
+<div class="section-header">📚 Research & Publications</div>
 <button class="accordion">🎓 Research Statement</button>
 <div class="panel">
 <p>
@@ -363,7 +363,7 @@ and economic implications.
 <div class="section-divider"></div>
 
 <section id="portfolio" class="section reveal">
-<h2>Portfolio</h2>
+<div class="section-header">🧪 Portfolio</div>
 <p>
 Selected academic, analytical, and engineering projects demonstrating applied skills
 in data science, geospatial analysis, transportation systems, and BIM-based solutions.
@@ -447,7 +447,7 @@ Portfolio Repository →
 <div class="section-divider"></div>
 
 <section id="toolbox" class="section reveal">
-<h2>Technical Toolbox</h2>
+<div class="section-header">🧰 Technical Toolbox</div>
 <div class="toolbox-block">
 <h4>Programming & Analytics</h4>
 <p>
@@ -518,7 +518,7 @@ Microsoft Word · PowerPoint · Teams · Outlook · Gmail · Zoom · LinkedIn
 <div class="section-divider"></div>
 
 <section id="hobbies" class="section reveal">
-<h2>Hobbies & Interests</h2>
+<div class="section-header">🎨 Hobbies & Interests</div>
 <p>
 Beyond my academic and professional pursuits, I actively engage in activities that
 support creativity, critical thinking, and personal well-being.
@@ -540,7 +540,7 @@ support creativity, critical thinking, and personal well-being.
 <div class="section-divider"></div>
 
 <section id="contact" class="section reveal">
-<h2>Contact</h2>
+<div class="section-header">📬 Contact</div>
 <p><strong>Email:</strong> srnpatwary7991.srnaeem@gmail.com</p>
 <p>
 <a href="https://linkedin.com/in/naeemsensei001">LinkedIn</a> |
