--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <!-- CONTACT (updated to match the layout you shared) -->
     <section id="contact" class="section contact-extended">
       <div class="container">
-        <h2 class="contact-title">Contact Us</h2>
+        <h2 class="contact-title">Contact Me</h2>
         <div class="contact-wrap">
           <!-- left column: details with icons -->
           <div class="contact-details">
@@ -495,7 +495,7 @@
               </span>
               <div class="contact-text">
                 <p class="muted">Address</p>
-                <p>291 Daehak-ro, Yuseong-gu,<br>Daejeon 34141, South Korea</p>
+                <p>Agargaon, Dhaka,<br>Bangladesh</p>
               </div>
             </div>
     
@@ -509,7 +509,7 @@
               </span>
               <div class="contact-text">
                 <p class="muted">Website</p>
-                <p><a href="https://sohyoung-in.com" target="_blank" rel="noopener">sohyoung-in.com</a></p>
+                <p><a href="https://sohyoung-in.com" target="_blank" rel="noopener">https://shahriarnaeem.github.io/About-NaeemSensei/</a></p>
               </div>
             </div>
     
@@ -539,9 +539,7 @@
                 <p class="muted">Social</p>
                 <p class="social-links">
                   <a href="https://linkedin.com/in/naeemsensei001" target="_blank" rel="noopener">LinkedIn</a>
-                  <a href="https://researchgate.net" target="_blank" rel="noopener">ResearchGate</a>
-                  <a href="https://ssrn.com" target="_blank" rel="noopener">SSRN</a>
-                  <a href="https://scholar.google.com" target="_blank" rel="noopener">GoogleScholar</a>
+                  <a href="https://facebook.com/naeemsensei" target="_blank" rel="noopener">Facebook</a>
                 </p>
               </div>
             </div>
