--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         </div>
 
         <div class="hero-visual" aria-hidden="true">
-          <div class="visual-card">NaeemSensei</div>
+          <div class="visual-card">
+            <img src="assets/images/profile.jpg" alt="Md Shahriar Rahman Naeem — profile photo">
+          </div>
         </div>
       </div>
     </section>
@@ -330,7 +332,7 @@
     </section>
 
     <!-- HOBBIES -->
-    <section id="hobbies-section" class="section alt">
+    <section id="hobbies" class="section alt">
       <div class="container">
         <h2>Hobbies & Interests</h2>
         <p class="section-intro">
@@ -425,7 +427,36 @@
       </div>
     </section>
 
-    <!-- TOOLBOX / PORTFOLIO -->
+    <!-- TOOLBOX -->
+    <section id="toolbox" class="section">
+      <div class="container">
+        <h2>Toolbox</h2>
+        <p>Tools & technologies I regularly use:</p>
+
+        <div class="cert-grid">
+          <div class="card">
+            <h4>Geospatial & GIS</h4>
+            <p>Google Earth Engine, ArcGIS Pro, QGIS, Sentinel data</p>
+          </div>
+          <div class="card">
+            <h4>Programming & Data</h4>
+            <p>Python (pandas, numpy, scikit-learn), Jupyter, Git</p>
+          </div>
+          <div class="card">
+            <h4>BIM & Structural</h4>
+            <p>Revit, Tekla, ETABS, SAFE, Navisworks</p>
+          </div>
+          <div class="card">
+            <h4>Visualization & Reporting</h4>
+            <p>Matplotlib, Seaborn, Power BI, GIS mapping</p>
+          </div>
+        </div>
+
+        <p class="to-top-inline"><a href="#home">↑ Back to top</a></p>
+      </div>
+    </section>
+
+    <!-- PORTFOLIO -->
     <section id="portfolio" class="section">
       <div class="container">
         <div class="section-header">🧪 Portfolio</div>
@@ -478,7 +509,6 @@
     </section>
 
     <!-- CONTACT -->
-    <!-- CONTACT (updated to match the layout you shared) -->
     <section id="contact" class="section contact-extended">
       <div class="container">
         <h2 class="contact-title">Contact Me</h2>
@@ -509,7 +539,7 @@
               </span>
               <div class="contact-text">
                 <p class="muted">Website</p>
-                <p><a href="https://sohyoung-in.com" target="_blank" rel="noopener">https://shahriarnaeem.github.io/About-NaeemSensei/</a></p>
+                <p><a href="https://shahriarnaeem.github.io/About-NaeemSensei/" target="_blank" rel="noopener">shahriarnaeem.github.io/About-NaeemSensei</a></p>
               </div>
             </div>
     
