--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- ABOUT -->
     <section id="about" class="section">
       <div class="container">
-        <h2 class="section-heading">About</h2>
+        <h2 style="margin-top:22px; text-align:center;">About</h2>
         <p>
           I am Civil Engineer dedicated to developing sustainable environmental strategies as per my research experience in
           <strong>geospatial analysis such as urban emission &amp; air pollution, conducting environmental impact assessments, and analyzing socio-environmental challenges for mega-scale transit projects.</strong>
@@ -71,7 +71,7 @@
     <!-- EXPERIENCE -->
     <section id="experience" class="section alt">
       <div class="container">
-        <h2 class="section-heading">Experience</h2>
+        <h2 style="margin-top:22px; text-align:center;">Experience</h2>
 
         <div class="card exp-card">
           <h3>Quantity Survey &amp; Cost Control Engineer</h3>
@@ -149,7 +149,7 @@
     <!-- EDUCATION & CERTIFICATIONS (combined for NAV link) -->
     <section id="education-certifications" class="section">
       <div class="container">
-        <h2 class="section-heading">Education &amp; Certifications</h2>
+        <h2 style="margin-top:22px; text-align:center;">Education &amp; Certifications</h2>
 
         <div class="card edu-card">
           <h3>B.Sc. in Civil Engineering</h3>
@@ -202,7 +202,7 @@
     <!-- FOCUS (combined Focus + Hobbies) -->
     <section id="focus" class="section alt">
       <div class="container">
-        <h2 class="section-heading">Focus</h2>
+        <h2 style="margin-top:22px; text-align:center;">Focus</h2>
 
         <div class="focus-grid">
           <div class="card focus-card">
@@ -264,7 +264,7 @@
     <!-- RESEARCH & PUBLICATIONS (combined Research + Toolbox) -->
     <section id="research-publications" class="section">
       <div class="container">
-        <h2 class="section-heading">Research &amp; Publications</h2>
+        <h2 style="margin-top:22px; text-align:center;">Research &amp; Publications</h2>
 
         <button class="accordion">🎓 Research Statement</button>
         <div class="panel">
@@ -303,7 +303,7 @@
           </div>
         </div>
 
-        <h3 style="margin-top:22px; text-align:center;">Toolbox</h3>
+        <h2 style="margin-top:22px; text-align:center;">Toolbox</h2>
         <div class="cert-grid" style="margin-top:12px;">
           <div class="card">
             <h4>Geospatial &amp; GIS</h4>
@@ -328,7 +328,7 @@
     <!-- PORTFOLIO -->
     <section id="portfolio" class="section alt">
       <div class="container">
-        <h2 class="section-heading">Portfolio</h2>
+        <h2 style="margin-top:22px; text-align:center;">Portfolio</h2>
 
         <div class="portfolio-grid">
           <div class="card project-card">
@@ -362,7 +362,7 @@
     <!-- CONTACT -->
     <section id="contact" class="section contact-extended">
       <div class="container">
-        <h2 class="section-heading">Contact Me</h2>
+        <h2 style="margin-top:22px; text-align:center;">Contact Me</h2>
 
         <div class="contact-wrap">
           <div class="contact-details">
