--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="#education-certifications" class="nav-link">Education & Certifications</a></li>
           <li><a href="#focus" class="nav-link">Focus</a></li>
           <li><a href="#research-publications" class="nav-link">Research & Publications</a></li>
+          <li><a href="#portfolio" class="nav-link">Projects</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
       </nav>
