--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <li><a href="#home" class="nav-link active">Home</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#experience" class="nav-link">Experience</a></li>
-          <li><a href="#education-certifications" class="nav-link">Education & Certifications</a></li>
+          <li><a href="#education-certifications" class="nav-link">Education</a></li>
           <li><a href="#focus" class="nav-link">Focus</a></li>
-          <li><a href="#research-publications" class="nav-link">Research & Publications</a></li>
+          <li><a href="#research-publications" class="nav-link">Research</a></li>
           <li><a href="#portfolio" class="nav-link">Projects</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
