--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- ABOUT -->
     <section id="about" class="section">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">About</h2>
+        <h2 style="margin-top:22px; text-align:center;">👤 About</h2>
         <p>
           I am Civil Engineer dedicated to developing sustainable environmental strategies as per my research experience in
           <strong>geospatial analysis such as urban emission &amp; air pollution, conducting environmental impact assessments, and analyzing socio-environmental challenges for mega-scale transit projects.</strong>
@@ -72,7 +72,7 @@
     <!-- EXPERIENCE -->
     <section id="experience" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Experience</h2>
+        <h2 style="margin-top:22px; text-align:center;">🏗️ Experience</h2>
 
         <div class="card exp-card">
           <h3>Quantity Survey &amp; Cost Control Engineer</h3>
@@ -203,7 +203,7 @@
     <!-- FOCUS (combined Focus + Hobbies) -->
     <section id="focus" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Focus</h2>
+        <h2 style="margin-top:22px; text-align:center;">🎯 Focus</h2>
 
         <div class="focus-grid">
           <div class="card focus-card">
@@ -265,7 +265,7 @@
     <!-- RESEARCH & PUBLICATIONS (combined Research + Toolbox) -->
     <section id="research-publications" class="section">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Research &amp; Publications</h2>
+        <h2 style="margin-top:22px; text-align:center;">📚 Research &amp; Publications</h2>
 
         <button class="accordion">🎓 Research Statement</button>
         <div class="panel">
@@ -304,7 +304,7 @@
           </div>
         </div>
 
-        <h2 style="margin-top:22px; text-align:center;">Toolbox</h2>
+        <h2 style="margin-top:22px; text-align:center;">🧰 Toolbox</h2>
         <div class="cert-grid" style="margin-top:12px;">
           <div class="card">
             <h4>Geospatial &amp; GIS</h4>
@@ -329,7 +329,7 @@
     <!-- PORTFOLIO -->
     <section id="portfolio" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Portfolio</h2>
+        <h2 style="margin-top:22px; text-align:center;">🧪 Portfolio</h2>
 
         <div class="portfolio-grid">
           <div class="card project-card">
@@ -363,7 +363,7 @@
     <!-- CONTACT -->
     <section id="contact" class="section contact-extended">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Contact Me</h2>
+        <h2 style="margin-top:22px; text-align:center;">📬 Contact Me</h2>
 
         <div class="contact-wrap">
           <div class="contact-details">
