--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="site-header">
+  <header class="site-header" id="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="#home">NaeemSensei</a>
 
-      <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-navigation" aria-label="Open navigation">
-        <span class="hamburger"></span>
-      </button>
+      <div class="header-controls">
+        <button id="theme-toggle" class="theme-toggle" aria-pressed="false" aria-label="Toggle dark mode" title="Toggle dark mode">
+          <span class="icon-sun" aria-hidden="true">☀️</span>
+          <span class="icon-moon" aria-hidden="true">🌙</span>
+        </button>
 
-      <!-- Top-level anchors (no dropdowns) to ensure each nav item links correctly -->
+        <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-navigation" aria-label="Open navigation">
+          <span class="hamburger"></span>
+        </button>
+      </div>
+
+      <!-- Top-level anchors -->
       <nav id="primary-navigation" class="primary-nav" role="navigation" aria-label="Primary">
         <ul class="nav-list">
           <li><a href="#home" class="nav-link active">Home</a></li>
@@ -59,7 +66,7 @@
     <!-- ABOUT -->
     <section id="about" class="section">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">👤 About</h2>
+        <h2 class="section-heading">👤 About</h2>
         <p>
           I am Civil Engineer dedicated to developing sustainable environmental strategies as per my research experience in
           <strong>geospatial analysis such as urban emission &amp; air pollution, conducting environmental impact assessments, and analyzing socio-environmental challenges for mega-scale transit projects.</strong>
@@ -72,7 +79,7 @@
     <!-- EXPERIENCE -->
     <section id="experience" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">🏗️ Experience</h2>
+        <h2 class="section-heading">🏗️ Experience</h2>
 
         <div class="card exp-card">
           <h3>Quantity Survey &amp; Cost Control Engineer</h3>
@@ -147,10 +154,10 @@
       </div>
     </section>
 
-    <!-- EDUCATION & CERTIFICATIONS (combined for NAV link) -->
+    <!-- EDUCATION & CERTIFICATIONS -->
     <section id="education-certifications" class="section">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">Education &amp; Certifications</h2>
+        <h2 class="section-heading">Education &amp; Certifications</h2>
 
         <div class="card edu-card">
           <h3>B.Sc. in Civil Engineering</h3>
@@ -200,10 +207,10 @@
       </div>
     </section>
 
-    <!-- FOCUS (combined Focus + Hobbies) -->
+    <!-- FOCUS -->
     <section id="focus" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">🎯 Focus</h2>
+        <h2 class="section-heading">🎯 Focus</h2>
 
         <div class="focus-grid">
           <div class="card focus-card">
@@ -262,10 +269,10 @@
       </div>
     </section>
 
-    <!-- RESEARCH & PUBLICATIONS (combined Research + Toolbox) -->
+    <!-- RESEARCH & PUBLICATIONS -->
     <section id="research-publications" class="section">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">📚 Research &amp; Publications</h2>
+        <h2 class="section-heading">📚 Research &amp; Publications</h2>
 
         <button class="accordion">🎓 Research Statement</button>
         <div class="panel">
@@ -304,7 +311,7 @@
           </div>
         </div>
 
-        <h2 style="margin-top:22px; text-align:center;">🧰 Toolbox</h2>
+        <h2 class="section-heading" style="margin-top:28px;">🧰 Toolbox</h2>
         <div class="cert-grid" style="margin-top:12px;">
           <div class="card">
             <h4>Geospatial &amp; GIS</h4>
@@ -329,7 +336,7 @@
     <!-- PORTFOLIO -->
     <section id="portfolio" class="section alt">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">🧪 Portfolio</h2>
+        <h2 class="section-heading">🧪 Portfolio</h2>
 
         <div class="portfolio-grid">
           <div class="card project-card">
@@ -363,7 +370,7 @@
     <!-- CONTACT -->
     <section id="contact" class="section contact-extended">
       <div class="container">
-        <h2 style="margin-top:22px; text-align:center;">📬 Contact Me</h2>
+        <h2 class="section-heading">📬 Contact Me</h2>
 
         <div class="contact-wrap">
           <div class="contact-details">
