--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- EXPERIENCE -->
     <section id="experience" class="section alt">
       <div class="container">
-        <h2 class="section-heading">🏗️ Experience</h2>
+        <h2 class="section-heading" style="margin-top:22px; text-align:center>🏗️ Experience</h2>
 
         <div class="card exp-card">
           <h3>Quantity Survey &amp; Cost Control Engineer</h3>
