--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
     <div class="container header-inner">
       <a class="brand" href="#home">NaeemSensei</a>
 
-      <div class="header-controls">
-        <button id="theme-toggle" class="theme-toggle" aria-pressed="false" aria-label="Toggle dark mode" title="Toggle dark mode">
-          <span class="icon-sun" aria-hidden="true">☀️</span>
-          <span class="icon-moon" aria-hidden="true">🌙</span>
-        </button>
-
-        <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-navigation" aria-label="Open navigation">
-          <span class="hamburger"></span>
-        </button>
-      </div>
-
       <!-- Top-level anchors -->
       <nav id="primary-navigation" class="primary-nav" role="navigation" aria-label="Primary">
         <ul class="nav-list">
@@ -40,6 +29,17 @@
       </nav>
     </div>
   </header>
+
+  <div class="header-controls">
+    <button id="theme-toggle" class="theme-toggle" aria-pressed="false" aria-label="Toggle dark mode" title="Toggle dark mode">
+      <span class="icon-sun" aria-hidden="true">☀️</span>
+      <span class="icon-moon" aria-hidden="true">🌙</span>
+    </button>
+
+    <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-navigation" aria-label="Open navigation">
+      <span class="hamburger"></span>
+    </button>
+  </div>
 
   <main>
     <!-- HERO -->
@@ -157,7 +157,7 @@
     <!-- EDUCATION & CERTIFICATIONS -->
     <section id="education-certifications" class="section">
       <div class="container">
-        <h2 class="section-heading">Education &amp; Certifications</h2>
+        <h2 class="section-heading">👨🏻‍🎓 Education &amp; Certifications</h2>
 
         <div class="card edu-card">
           <h3>B.Sc. in Civil Engineering</h3>
